fix #620 - ellipsize text on collection card overflow

--- a/src/components/collection-card/collection-card.module.scss
+++ b/src/components/collection-card/collection-card.module.scss
@@ -49,11 +49,23 @@
 	display: flex;
 	margin-left: var(--collection-card_content_padding-left);
 	margin-right: var(--collection-card_content_padding-right);
+
+	&> div {
+		// prevent div from expanding beyond container size due to text overflow
+		min-width: 0;
+	}
 }
 
 .title {
 	margin-top: var(--collection-card_content_padding-top);
 	margin-bottom: var(--collection-card_title_padding-bottom);
+}
+
+.title, .description {
+	// prevents text overflow when the container is smaller than a single word (issue #620)
+	// - this otherwise has no effect, since the container can always expand vertically
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .bottomRow {
